--- a/src/views/layouts/sessionInit.ejs
+++ b/src/views/layouts/sessionInit.ejs
@@ -41,6 +41,7 @@
         <h1 class="font-bold text-red-700">Usuario o contraseña erroneos</h1>
        <% } %>
       <form class="flex flex-col" method="post" action="/login">
+        <div id="errorLogin"></div>
         <div class="mb-6 pt-3 rounded bg-gray-200">
           <label
             class="block text-gray-700 text-sm font-bold mb-2 ml-3"
