--- a/src/views/layouts/register.ejs
+++ b/src/views/layouts/register.ejs
@@ -38,7 +38,7 @@
     </section>
 
     <section class="mt-10">
-      <form class="flex flex-col" >
+      <form class="flex flex-col" action="/session/register" method="post" >
         <div id="errorRegister">
 
         </div>
@@ -72,8 +72,6 @@
         </div>
         <button
           class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-2 rounded shadow-lg hover:shadow-xl transition duration-200"
-          onclick="handleRegister()"
-          type="button"
         >registro</button>
 
       </form>
