--- a/src/views/layouts/sessionInit.ejs
+++ b/src/views/layouts/sessionInit.ejs
@@ -40,7 +40,7 @@
       <% if (error) { %> 
         <h1 class="font-bold text-red-700">Usuario o contraseña erroneos</h1>
        <% } %>
-      <form class="flex flex-col" method="post" action="/login">
+      <form class="flex flex-col" method="post" action="/session/init">
         <div id="errorLogin"></div>
         <div class="mb-6 pt-3 rounded bg-gray-200">
           <label
@@ -69,8 +69,7 @@
           />
         </div>
         <button
-        type="button"
-        onclick="handleLogin()"
+       
           class="bg-purple-600 hover:bg-purple-700 text-white font-bold py-2 rounded shadow-lg hover:shadow-xl transition duration-200"
         >Sign In</button>
 
