--- a/src/views/layouts/register.ejs
+++ b/src/views/layouts/register.ejs
@@ -84,7 +84,7 @@
   <div class="max-w-lg mx-auto text-center mt-12 mb-6">
     <p class="text-white">Registrate con 
       <a
-        href="/login-facebook"
+        href="/session/login/facebook"
         class="font-bold hover:underline"
       >Facebook</a>.</p>
   </div>
