--- a/src/views/chat.hbs
+++ b/src/views/chat.hbs
@@ -55,14 +55,14 @@
             const html = mensajes.map((elem, index) => {
             return(
                 ` 
-                <div class="form-control text-ellipsis mx-5 w-full px-4 py-2 max-w-xs bg-gray-400 border rounded-xl my-2 text-white">
+                <div class="form-control max-w-xs text-ellipsis mx-5  px-4 py-2 bg-gray-400 border rounded-xl my-2 text-white">
                     <label   class="form-label">
                         <label  class="label">
                             <span class="label-text  text-gray-900 font-semibold">${elem.email}</span>
                             <span class="label-text-alt">${elem.updatedAt.slice(11,18)}</span>
                         </label>
                     </label>
-                <h1   class=" m-2 text-ellipsis w-full max-w-xs">${elem.msg}</h1>
+                    <h1  class=" m-2 max-w-xl">${elem.msg}</h1>
                 </div>
                 
                 `)
