--- a/src/views/layouts/products.ejs
+++ b/src/views/layouts/products.ejs
@@ -19,7 +19,7 @@
 </h2>
 <section class="grid grid-cols-4 my-5 justify-items-center p-4">
   <% collectionsDatabase.forEach( function(collection){ %> 
-    <a href="/coleccions/:<%-collection._id  %> ">
+    <a href="/products/:<%-collection._id  %> ">
       <div
         class="flex shadow hover:shadow-xl hover:shadow-[#9921e8]/20 rounded-xl border-solid m-5 border-black flex-col rounded-xl mt-6"
       >
