--- a/src/views/chat.hbs
+++ b/src/views/chat.hbs
@@ -22,7 +22,7 @@
 <body class=" body-bg flex items-center justify-center  h-screen">
   <div class="mockup-window border bg-base-300">
   <div class="px-4 py-16 bg-base-200">
-    <a  href ='/' class="text-primary">
+    <a onclick="closeConnection()" href="/" class="text-primary">
      <svg xmlns="http://www.w3.org/2000/svg" class="h-8 w-8" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6" /></svg>
     </a>
           <div class="m-2 w-content h-96  overflow-y-scroll scroll-smooth " id="messages">
@@ -79,6 +79,10 @@
         };
         socket.emit('new-message', mensaje);
         return false;
+        }
+       async function closeConnection(){
+           await socket.disconnect()
+            
         }
        
     
