--- a/src/views/layouts/navbar.ejs
+++ b/src/views/layouts/navbar.ejs
@@ -1,6 +1,6 @@
 <nav class=" shadow shadow-[#9921e8]/10 border-gray-200 px-2 rounded py-4 px-4 pt-6 text-2xl border-[#9921e8] border-opacity-10 bg-gray-50 border-b">
     <div class=" flex justify-between px-8 py-2  align-center">
-        <a href="./" class="flex items-center">
+        <a href="/" class="flex items-center">
             <img
               src="https://cdn3.iconfinder.com/data/icons/lylac-ecommerce/32/Store-512.png"
               class="mr-3 h-6 sm:h-9"
