--- a/src/views/layouts/sessionInit.ejs
+++ b/src/views/layouts/sessionInit.ejs
@@ -48,7 +48,7 @@
             for="email"
           >Email</label>
           <input
-            type="text"
+            type="email"
             name="email"
             id="email"
             class="bg-gray-200 rounded w-full text-gray-700 focus:outline-none border-b-4 border-gray-300 focus:border-purple-600 transition duration-500 px-3 pb-3"
