--- a/src/views/layouts/navbar.ejs
+++ b/src/views/layouts/navbar.ejs
@@ -28,7 +28,7 @@
           </li>
           <li>
             <a
-              href="#"
+              href="/cart"
               class="block py-2 pr-4 pl-3 text-gray-700 border-b border-gray-100 hover:bg-gray-50 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700"
             ><img class ='
             object-contain  h-5 'src="https://cdn0.iconfinder.com/data/icons/ecommercy/32/cart2_empty-22-256.png" alt=""></a>
