--- a/src/views/layouts/itemDetail.ejs
+++ b/src/views/layouts/itemDetail.ejs
@@ -21,7 +21,7 @@
   <% if(product){ %>
   <div class="m-5  flex flex-row">
     <div class="h-screen w-full">
-      <img class=" h-screen w-full rounded-md" src="<%=product.coverPage%>" alt="Nombre colecion" />
+      <img class=" h-screen w-full rounded-md" src="<%=product.image%>" alt="Nombre colecion" />
     </div>
     <div class="w-0.5 bg-gray-200 mx-5 h-auto  "></div>
     <div class="text-center h-screen w-full">
