--- a/src/views/layouts/itemDetail.ejs
+++ b/src/views/layouts/itemDetail.ejs
@@ -30,7 +30,7 @@
         <h2 class="text-3xl font-medium w-48 h-12text-center p-2 bg-yellow-100 rounded-full">Sale</h2>
       </div>
       <div class="flex justify-between mt-12 mx-10">
-        <h2 class="text-3xl font-light ">$4000</h2>
+        <h2 class="text-4xl font-semibold ">$ <%= product.price %> </h2>
         <h2 class="text-3xl font-semibold">5/5★</h2>
       </div>
       <div class="mx-5 my-24">
@@ -47,7 +47,6 @@
       </div>
       <div class="flex w-content justify-between mx-12">
         <button onclick="addToCart()" type="button" class="btn btn-outline btn-lg">Agregar al carrito</button>
-        <button class="btn btn-active btn-lg">Comprar</button>
       </div>
       <div class="w-content text-center items-center justify-around my-24  mx-10">
         <p class="text-xl font-normal text-center"><%= product.description %> </p>
